--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # [Aa]ssets/AssetStoreTools*
 
+# No need to commit plugins folder
+[Aa]ssets/Plugins.meta
+[Aa]ssets/Plugins
+
 # Visual Studio cache directory
 .vs/
 
